--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_tts: ^4.0.2
   google_fonts: ^4.0.4
   shake: ^1.0.1
+  sensors_plus: ^6.0.1
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
